--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
 name: CI
 
 on:
+  branch:
+    - main
   push:
   pull_request:
 
@@ -14,8 +16,6 @@ jobs:
       matrix:
         toolchain:
           - linux-gcc
-          - macos-clang
-          - windows-msvc
 
         configuration:
           - Debug
@@ -24,14 +24,6 @@ jobs:
           - toolchain: linux-gcc
             os: ubuntu-latest
             compiler: gcc
-
-          - toolchain: macos-clang
-            os: macos-latest
-            compiler: clang
-
-          - toolchain: windows-msvc
-            os: windows-latest
-            compiler: msvc
 
     steps:
     - name: Checkout Code
